--- a/app/globals.css
+++ b/app/globals.css
@@ -134,8 +134,8 @@ body {
 /* Hamburger Menu */
 .menu-toggle {
   position: fixed;
-  top: 5px;
-  right: 10px;
+  top: 15px;
+  right: 20px;
   z-index: 1001;
   background: none;
   border: none;
@@ -162,10 +162,10 @@ body {
 
 .menu-content {
   position: fixed;
-  top: 0px;
-  right: 0px;
-  width: 140px;
-  height: 280px;
+  top: 10px;
+  right: 15px;
+  width: 200px;
+  height: 310px;
   background-color: var(--code-background-color);
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
   transform: translateY(-150%);
@@ -173,7 +173,7 @@ body {
   padding: 20px 20px;
   overflow-y: auto;
   z-index: 1000;
-  border-radius: 0px 0px 0px 20px;
+  border-radius: 20px;
   font-family: "Geist Mono";
 
   will-change: transform;
@@ -199,12 +199,12 @@ body {
 }
 
 .menu-content a {
-  color: var(--code-color) !important;
+  color: var(--color-link) !important;
 }
 
 .menu-content ul li {
   margin: 0 !important;
-  color: var(--code-color) !important;
+  color: var(--color-link) !important;
   font-size: 1rem;
   font-weight: 600;
   padding: 2px 10px;
@@ -217,10 +217,9 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   margin-top: 40px;
-  row-gap: 8px;
+  row-gap: 14px;
 }
 
 /* Theme Selector */
@@ -1154,13 +1153,13 @@ a[aria-label="ReadCV"] svg {
   }
 
   .menu-toggle {
-    top: 5px;
-    right: 20px;
+    top: 15px;
+    right: 25px;
   }
 
   .menu-content {
-    top: 0;
-    right: 10px;
+    top: 10;
+    right: 20px;
   }
 }
 
