--- a/app/globals.css
+++ b/app/globals.css
@@ -46,7 +46,6 @@
   --syntax-builtin: #6f42c1;
   --syntax-meta: #6a737d;
   --color-text-rgb: 51, 51, 51;
-  --code-header-bg: #f4f4f4;
 }
 
 /* Dark theme */
@@ -69,7 +68,6 @@
   --syntax-builtin: #4ec9b0;
   --syntax-meta: #9cdcfe;
   --color-text-rgb: 255, 255, 255;
-  --code-header-bg: #181818;
 }
 
 /* Solarized Dark theme */
@@ -92,7 +90,6 @@
   --syntax-builtin: #91b347;
   --syntax-meta: #827dbb;
   --color-text-rgb: 161, 181, 189;
-  --code-header-bg: #002c39;
 }
 
 /* Base Styles */
@@ -179,7 +176,6 @@ body {
   z-index: 1000;
   border-radius: 20px;
   font-family: "Geist Mono";
-
   will-change: transform;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -210,7 +206,7 @@ body {
   margin: 0 !important;
   color: var(--color-link) !important;
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: 500;
   padding: 2px 10px;
   border-radius: 6px;
 }
@@ -222,7 +218,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 40px;
+  margin-top: 30px;
   row-gap: 14px;
 }
 
@@ -243,7 +239,7 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  bottom: 20px;
+  bottom: 30px;
   left: 50%;
   transform: translate(-50%);
 }
@@ -341,7 +337,7 @@ pre code {
   justify-content: space-between;
   align-items: center;
   padding: 0.25rem 0.75rem;
-  background-color: var(--code-header-bg);
+  background-color: var(--code-background-color);
   border-top-left-radius: var(--border-radius);
   border-top-right-radius: var(--border-radius);
   font-size: 0.75rem;
